--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -14,7 +14,7 @@ menu:
 # - {name: About, link: '/about'}
 - {name: Projects, link: '/projects'}
 - {name: Blog, link: '/blog'}
-- {name: Contact, link: '/contact'}
+- {name: Contact, link: "#bottom"}
 
 
 #-------------------------------
