--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -8,9 +8,8 @@ location: Copenhagen, Denmark
 
 
 # ABOUT --------------------------------------------------
-about: Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-  Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-  Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+about: I am a software and computer engineer from Denmark with a background in electrical engineering and the creative media industry. 
+  In my spare time I enjoy playing volleyball, doing fun projects with my friends and occasionally making videos for my YouTube channel or Instagram page.
 
 
 # MENU ---------------------------------------------------
